{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "9b9f0a4f-a458-40e7-8f37-37f70d801776",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "42117d84-9425-4d55-8821-bf3b7126d516",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "2f87505f-5091-4b2e-9b87-997fcf455ab3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ba4f4a6-9bd6-49e6-888f-7dcf937c1bb7",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f6a514a-1fcd-4d31-8fd8-146643ffd0f0",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}